--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui_first.MainActivity"
-            android:launchMode="singleTask"
-            >
+        <activity
+            android:name=".ui_first.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
-            <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.DEFAULT"/>
-            <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-            <data
-                android:scheme="openinstall"/>
+                <data android:scheme="openinstall" />
             </intent-filter>
         </activity>
         <activity android:name=".ui_first.SplashActivity">
@@ -86,7 +85,8 @@
         <activity android:name=".ui_third.FeedBackActivity" />
         <activity android:name=".ui_second.SearchActivity" />
         <activity android:name=".ui_third.ModuleActivity" />
-        <activity android:name=".ui_third.ResultActivity"></activity>
+        <activity android:name=".ui_third.ResultActivity" />
+        <activity android:name=".ui_third.MallActivity"></activity>
     </application>
 
 </manifest>
