--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
     compile 'com.facebook.fresco:fresco:1.0.0'
+    compile 'com.umeng.analytics:analytics:latest.integration'
     testCompile 'junit:junit:4.12'
 }
